Imp: improve mobile menu - add a white line (border) to separate the menu toggle button and the actual menu ul, when toggled on - set menu ul max-height to 70vh and overflow-y auto, in place of max-height 350px and overflow-y scroll

--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -30,7 +30,9 @@
 		color: $white;
 		cursor: pointer;
 		padding: .5em;
-
+		&.toggled-on {
+			border-bottom: 1px solid;
+		}
 		@include min($bml) {
     	display: none;
 		}
@@ -39,8 +41,8 @@
 
 	.menu {
 		@include max($bml) {
-			max-height: 350px;
-			overflow-y: scroll;
+			max-height: 70vh;
+			overflow-y: auto;
 		}
 	}
 
@@ -60,12 +62,7 @@
 		display: none;
 
 		&.toggled-on {
-			border-top: 1px solid $white;
 			display: inline-block;
-
-			@include min($bml) {
-				border-top: none;
-			}
 		}
 
 		@include min($bml) {
